Add minifier, add gitignore

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dummy-json": "^1.0.1"
+    "dummy-json": "^1.0.1",
+    "html-minifier": "^3.0.2"
   }
 }
